# minimal_google_protobuf_rust

./: Cargo.toml  README.md  build.rs
src/: client.rs  server.rs
src/proto/: message.proto
